@@ -1,16 +1,23 @@
 package com.example.reto_backend_febrero2026.licitacion;
 
-import com.example.reto_backend_febrero2026.audit.Auditable;
-import com.example.reto_backend_febrero2026.familia.*;
-import com.example.reto_backend_febrero2026.integration.servlet.dto.LicitacionItemRecord;
-import com.example.reto_backend_febrero2026.subfamilia.*;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
+
+import com.example.reto_backend_febrero2026.audit.Auditable;
+import com.example.reto_backend_febrero2026.familia.FamiliaDTO;
+import com.example.reto_backend_febrero2026.familia.IFamiliaService;
+import com.example.reto_backend_febrero2026.integration.servlet.dto.LicitacionItemRecord;
+import com.example.reto_backend_febrero2026.subfamilia.ISubfamiliaService;
+import com.example.reto_backend_febrero2026.subfamilia.SubfamiliaDTO;
 
 @Service
 public class LicitacionService implements ILicitacionService {
@@ -32,10 +39,22 @@ public class LicitacionService implements ILicitacionService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<LicitacionDTO> findAll() {
-        return licitacionRepository.findAll().stream()
+    public List<LicitacionDTO> findAll(
+            LocalDate fechaPublicacionDesde,
+            LocalDate fechaPublicacionHasta,
+            LocalDate fechaCierreDesde,
+            LocalDate fechaCierreHasta,
+            Integer familiaCod,
+            Integer subfamiliaCod)
+    {
+        LocalDateTime cierreDesde = licitacionUtility.toStartOfDay(fechaCierreDesde);
+        LocalDateTime cierreHasta = licitacionUtility.toEndOfDay(fechaCierreHasta);
+
+        return licitacionRepository
+                .getLicitacionesByFechas(fechaPublicacionDesde, fechaPublicacionHasta, cierreDesde, cierreHasta, familiaCod, subfamiliaCod)
+                .stream()
                 .map(licitacionMapper::licitacionToLicitacionDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -44,7 +63,11 @@ public class LicitacionService implements ILicitacionService {
         return licitacionRepository
                 .findById(id)
                 .map(licitacionMapper::licitacionToLicitacionDTO)
-                .orElseThrow(() -> new RuntimeException("No existe licitación con id: " + id));
+                .orElseThrow(() ->
+                new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "No existe licitación con id: " + id
+                ));
     }
 
     @Auditable(module = "LICITACION_SERVICE", action = "CLEAN_SAVE")
@@ -78,15 +101,26 @@ public class LicitacionService implements ILicitacionService {
     @Transactional(readOnly = true)
     public LicitacionDTO getLicitacionByTitulo(String titulo){
         return licitacionRepository
-                .findByTitulo(titulo)
+                .getLicitacionByTitulo(titulo)
                 .map(licitacionMapper::licitacionToLicitacionDTO)
-                .orElseThrow(() -> new RuntimeException("No existe licitación con titulo: " + titulo));
+                .orElseThrow(() ->
+                new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "No existe licitación con titulo: " + titulo
+                ));
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<LicitacionDTO> getLicitacionesByFamiliaAndSubfamilia(Integer familiaCod, Integer subfamiliaCod) {
-        return licitacionRepository.findByFamilia_CodAndSubfamilia_Cod(familiaCod,subfamiliaCod).stream()
+        List<Licitacion> licitaciones = licitacionRepository.findByFamilia_CodAndSubfamilia_Cod(familiaCod,subfamiliaCod);
+
+        if(licitaciones.isEmpty()){
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No existen licitaciones para familia " + familiaCod
+            + " y subfamilia " + subfamiliaCod);
+        }
+
+        return licitaciones.stream()
                 .map(licitacionMapper::licitacionToLicitacionDTO).collect(Collectors.toList());
     }
 
@@ -101,8 +135,12 @@ public class LicitacionService implements ILicitacionService {
     public LicitacionDTO updateEnviadoFlag(Integer id, boolean flag) {
 
         Licitacion licitacion = licitacionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("No existe licitación con id: " + id));
-
+                .orElseThrow(() ->
+                        new ResponseStatusException(
+                                HttpStatus.NOT_FOUND,
+                                "No existe licitación con id: " + id
+                        )
+                );
         licitacion.setEnviado(flag);
 
         return licitacionMapper.licitacionToLicitacionDTO(licitacion);
